--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!DOCTYPE>
+<html>
+  <head>
+	<title>Ruby on Rails Sample Application | Contact</title>
+  </head>
+  <body>
+	<h1>Contact Us</h1>
+	<p>Vinay Sawant
+	   BE Computer Engg
+	   
+	   Contact Me on sawantvinayr@gmail.com
+	   MObile No 9762014907
+	</p>	
+ </body>
+</html>
+
