--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE>
+<html>
+  <head>
+	<title>Ruby on Rails Sample Application | Home	</title>
+  </head>
+  <body>
+	<h1>Home</h1>
+	<p>This is the sample application in rails by Vinay Sawant</p>	
+ </body>
+</html>
+
