Added the singl layout for all pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,7 @@
-<!DOCTYPE>
-<html>
-  <head>
-	<title>Ruby on Rails Sample Application | About Us</title>
-  </head>
-  <body>
-	<h1>About Us</h1>
-	<p>This is the sample application in rails by Vinay Sawant
-	   This is designed for the JSCOE students.
+<h1>About Us</h1>
+<p>
+This is the sample application in rails by Vinay Sawant 
+	 This is designed for the JSCOE students.
 
-	</p>	
- </body>
-</html>
-
+</p>	
+ 
