--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,16 +1,8 @@
-<!DOCTYPE>
-<html>
-  <head>
-	<title>Ruby on Rails Sample Application | Contact</title>
-  </head>
-  <body>
-	<h1>Contact Us</h1>
-	<p>Vinay Sawant
-	   BE Computer Engg
+<h1>Contact Us</h1>
+<p>Vinay Sawant
+   BE Computer Engg
 	   
-	   Contact Me on sawantvinayr@gmail.com
-	   MObile No 9762014907
-	</p>	
- </body>
-</html>
-
+   Contact Me on sawantvinayr@gmail.com
+   Mobile No 9762014907
+</p>	
+ 
