--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,7 @@
-<!DOCTYPE>
-<html>
-  <head>
-	<title>Ruby on Rails Sample Application | Home	</title>
-  </head>
-  <body>
-	<h1>Home</h1>
-	<p>This is the sample application in rails by Vinay Sawant</p>	
- </body>
-</html>
+<h1>Home</h1>
+<p>
+This is the sample application in rails by Vinay Sawant
+</p>	
+ 
+
 
