--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,5 @@
-<h1>About Us</h1>
+<h1>About</h1>
 <p>
-This is the sample application in rails by Vinay Sawant 
-	 This is designed for the JSCOE students.
-
+This is the sample application in rails by Vinay Sawant This is designed for the JSCOE students
 </p>	
  
