--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
-   <title>Ruby on Rails Sample Application | <%= @title %></title>
+   <title> <%= title %> </title>
    <%= csrf_meta_tag %>
   </head> 
 <body>
