--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer>
 	<nav class='round'>
 		<ul>
-			<li><%= link_to "About",'#' %></li>
-			<li><%= link_to "Contact",'#' %></li>
-			<li><%= link_to "News",'#' %></li>
-			<li><%= link_to "Rails Tutorial",'#' %></li>
+			<li><%= link_to "About",about_path %></li>
+			<li><%= link_to "Contact",contact_path %></li>
+			<li><%= link_to "News",'http://www.esakal.com' %></li>
+			<li><%= link_to "Rails Tutorial",'http://www.railstutorial.org' %></li>
 		</ul>
 </footer>
