--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,10 @@
 		<header>
-			<%= link_to image_tag("logo.png", :alt => "Sample App", :class => "round"),
-										root_path				
-			%>
+			<%= link_to logo, root_path%>
 			<nav class="round">
 				<ul>
 					<li><%= link_to "Home",root_path %> </li>
 					<li><%= link_to "help",help_path %> </li>
-					<li><%= link_to "Sign In","#" %> </li>
+					<li><%= link_to "Sign In",signup_path %> </li>
 				</ul>
 			</nav>
 		</header>
