--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,5 @@
 This is the sample application in rails by Vinay Sawant
 </p>	
  
-<%= link_to "Sign up now!",'#', :class => "signup_button round" %>
+<%= link_to "Sign up now!",signup_path, :class => "signup_button round" %>
 
